--- a/source/assets/stylesheets/pages/_howto.scss
+++ b/source/assets/stylesheets/pages/_howto.scss
@@ -1,11 +1,3 @@
-.howto-fullscreen{
-  align-items: center;
-  height: 100vh;
-  display: flex;
-
-  background-size: cover;
-}
-
 .howto-body-container{
   margin: 0 auto;
   margin-left: 80px;
@@ -18,6 +10,7 @@
     color: black;
     font-size:medium;
     letter-spacing: 0.2em;
+    margin-top: 50px;
   }
   h1{
     color: black;
@@ -86,6 +79,7 @@
   }
   h2{
     font-size: 12px;
+    margin-top: 50px;
   }
   }
     .howto-fullscreen{
@@ -113,7 +107,9 @@
   padding-bottom: 15px;}
   h2{
     font-size: 16px;
-    margin-left: -50px}
+    margin-left: -50px;
+    margin-top: 50px;
+  }
   }
   .howto-fullscreen{
     background-position: right;
